# VascoDaGammaRay

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  run_example.sh  run_test.sh
.github/workflows/: build.yml
src/: Command.cpp  Command.h  CommandHideWindows.h  CommandPrintInfo.h  CommandPrintWindows.h  CommandQuit.h  CommandSetPersistentWindowsFalse.h  CommandTrackWindowEvents.h  Globals.h  lib.cpp
src/gui/: main.cpp
test/: CMakeLists.txt  main.cpp  main.qml
